2024-08-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/Makefile.in: fixed distclean for cases dir

2024-08-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Fix label defore declaration.
	* src/pdk/gen.c:
	  Fix a pdk code generation issue, part of bug #3697.

2024-08-14 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdccconf_in.h:
	  Regenerate file via autoheader to fix --disable-f8-port.
	* support/regression/tests/bug-3745.c.in:
	  Test more qualifiers.

2024-08-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/MakeList:
	  Disable a test for pdk15, where it fails due to lack of memory.
	* src/SDCCast.c,
	  src/SDCCopt.c,
	  src/SDCCsalloc.hpp,
	  src/mcs51/main.c,
	  src/z80/gen.c,
	  src/SDCCsymt.c:
	  A bit of code refactoring inspired by GCC 14 / clang 19 warnings.
	* support/regression/tests/wcsto.c:
	  Fix an issue discovered via a GCC 14 warning.

2024-08-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/ds390/gen.c:
	  Fix bug #3769.

2024-08-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c,
	  src/SDCCsymt.c,
	  support/regression/tests/bug-3766.c:
	  Fix bug #3766.
	* src/pic16/glue.c:
	  Try to fix bug #3767.
	* support/regression/tests/bug-3745.c:
	  Regression test for bug #3745.

2024-08-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/include/setjmp.h,
	  sim/ucsim/src/sims/f8.src/decode.h,
	  sim/ucsim/src/sims/f8.src/f8cl.h,
	  sim/ucsim/src/sims/f8.src/glob.cc,
	  sim/ucsim/src/sims/f8.src/imove.cc,
	  support/regression/tests/rotate.c.in:
	  f8 fixes.

2024-08-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge sdcc from f8 branch to trunk.

2024-08-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Small f8 codegen improvements.

2024-08-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asf8/f8mch.c,
	  src/f8/gen.c:
	  Adapt to instruction changes.
